<resources>
    <string name="app_name">Jordan Sonier\'s Android LabsAssingments</string>
    <string name="text" translatable="false">Type your Password</string>
    <string name="button" translatable="false">Login</string>
    <string name="editText" translatable="false"></string>
</resources>